CHANGES IN VERSION 1.3.0
------------------------

NEW FEATURES

    o Add display,AnnotationHub-method using shiny

CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

    o Support for TabixFile VCF files

BUG FIXES

    o incorrect tab completion does not reset the completion line

CHANGES IN VERSION 1.0.0
-------------------------

PACKAGE FEATURES

    o The AnnotationHub package allows the easy creation of an
    AnnotationHub object that cab be used to get access to a wealth of
    Annotation objects.

    o At creation, all the supported objects can be accessed by
    tab-completion to their various resource paths.  When you get to
    the resource, you can just hit enter to trigger a download of the
    data to your R session.

    o Because AnnotationHub already allows direct access to thousands
    of objects, and because this number is expected to swell in the
    coming years, filters can be applied to limit the number of things
    you have to choose from.  Metadata is stored for each object to
    allow filtering.

    o AnnotationHub supports caching as a performance enhancement, so
    if you have previously downloaded a resource from the server, it
    will be store and retrieved from a local cache to save time.

    o AnnotationHub also supports versioning, so that versions can be
    captured and then referred to later so as to enable reproducible
    research.

    o Please see the manual pages and associated vignette for more
    detailed information about how to use this resource.