@@ -13,35 +13,31 @@ ahinfoList <- function(list){
 }
 ## show method
 setMethod(show, "ahinfoList", function(object) {
-    txt <- paste(
-                 " $DataProvider ",object$DataProvider,"\n",
-                 "$SourceVersion ",object$SourceVersion,"\n",
-                 "$Description ",object$Description,"\n",
-                 "$Species ",object$Species,"\n",
-                 "$Genome ",object$Genome,"\n",
-                 "$BiocVersion ",
-                 paste(unlist(object$BiocVersion), collapse=", "),"\n",
-                 "$Tags ",paste(unlist(object$Tags), collapse=", "),"\n",
-                 "$SourceUrl ",object$SourceUrl,"\n",
-                 "$RDataPath ",object$RDataPath,"\n",
-                 "$RDataName ",object$RDataName,"\n"
-                 )
-    cat(txt)
+    tags <- paste(unlist(object$Tags), collapse=", ")
+    cat("$DataProvider ",object$DataProvider,"\n",
+        "$SourceVersion ",object$SourceVersion,"\n",
+        "$Description ",object$Description,"\n",
+        "$Species ",object$Species,"\n",
+        "$Genome ",object$Genome,"\n",
+        "$BiocVersion ", paste(unlist(object$BiocVersion), collapse=", "),"\n",
+        paste(strwrap(sprintf("$Tags  %s\n", tags), exdent=4),
+              collapse="\n"), "\n",
+        "$SourceUrl ",object$SourceUrl,"\n",
+        "$RDataPath ",object$RDataPath,"\n",
+        "$RDataName ",object$RDataName,"\n", sep="")
 })
 
 .getOnePathObject <- function(x, path){
-    if(length(path) >1) stop("Only one resource at a time please.")
+    if (length(path) != 1L)
+        stop("'path' must be length 1")
     ## 1st translate path to RDataPath style
     srcUrls <- snapshotUrls(x)
     path <- srcUrls[names(srcUrls) %in% path]
     path <- sub(paste(hubUrl(x),"/",sep=""), "", path)
     
     ## get metadata based on the hub and path
-    cols <- c('BiocVersion','DataProvider','Description','Genome',
-             'Tags','SourceUrl','SourceVersion','Species','RDataPath')
-    m <- .metadata(snapshotUrl(),
-                   filters=list(RDataPath=path),
-                   cols=cols)
+    m <- .metadata(snapshotUrl(), filters=list(RDataPath=path),
+                   columns=.AHINFO_COLUMNS)
     
     m$RDataPath <- paste0(hubUrl(x),"/",m$RDataPath)
     m$RDataName <- names(snapshotUrls(x))[snapshotUrls(x) %in% m$RDataPath]
